force-app/main/default/objects/FEC_DataCampaign__c/FEC_DataCampaign__c.object-meta.xml
<CustomObject>
    <label>Data Campaign</label>
    <nameField>
        <label>Data Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Campaigns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>