force-app/main/default/objects/FEC_DataCampaign__c/fields/FEC_AccountOrContractNumber__c.field-meta.xml
<CustomField>
    <fullName>FEC_AccountOrContractNumber__c</fullName>
    <label>Account or Contract number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>