force-app/main/default/objects/FEC_DataCampaign__c/fields/FEC_AgentID__c.field-meta.xml
<CustomField>
    <fullName>FEC_AgentID__c</fullName>
    <label>Agent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>