force-app/main/default/objects/FEC_DataCampaign__c/fields/FEC_AppId__c.field-meta.xml
<CustomField>
    <fullName>FEC_AppId__c</fullName>
    <label>App Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>