force-app/main/default/objects/FEC_DataCampaign__c/fields/FEC_Attempt__c.field-meta.xml
<CustomField>
    <fullName>FEC_Attempt__c</fullName>
    <label>Attempt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>