force-app/main/default/objects/FEC_DataCampaign__c/fields/FEC_CallbackRequested__c.field-meta.xml
<CustomField>
    <fullName>FEC_CallbackRequested__c</fullName>
    <label>CallbackRequested</label>
    <length>255</length>
    <type>Text</type>
</CustomField>