force-app/main/default/objects/FEC_DataCampaign__c/fields/FEC_CallResult__c.field-meta.xml
<CustomField>
    <fullName>FEC_CallResult__c</fullName>
    <label>Call Result</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>