force-app/main/default/objects/FEC_DataCampaign__c/fields/FEC_CallStatus__c.field-meta.xml
<CustomField>
    <fullName>FEC_CallStatus__c</fullName>
    <label>Call Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>