force-app/main/default/objects/FEC_DataCampaign__c/fields/FEC_CallTime__c.field-meta.xml
<CustomField>
    <fullName>FEC_CallTime__c</fullName>
    <label>Call Time</label>
    <type>DateTime</type>
</CustomField>