force-app/main/default/objects/FEC_DataCampaign__c/fields/FEC_CS_Campaign__c.field-meta.xml
<CustomField>
    <fullName>FEC_CS_Campaign__c</fullName>
    <label>FEC CS Campaign</label>
    <referenceTo>FEC_CS_Campaign__c</referenceTo>
    <relationshipLabel>Data CS Campaigns</relationshipLabel>
    <relationshipName>Data_CS_Campaigns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>