force-app/main/default/objects/FEC_DataCampaign__c/fields/FEC_CurrentCallAttempt__c.field-meta.xml
<CustomField>
    <fullName>FEC_CurrentCallAttempt__c</fullName>
    <label>CurrentCallAttempt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>