force-app/main/default/objects/FEC_DataCampaign__c/fields/FEC_DateTime1__c.field-meta.xml
<CustomField>
    <fullName>FEC_DateTime1__c</fullName>
    <label>DateTime 1</label>
    <type>DateTime</type>
</CustomField>