force-app/main/default/objects/FEC_DataCampaign__c/fields/FEC_DateTime2__c.field-meta.xml
<CustomField>
    <fullName>FEC_DateTime2__c</fullName>
    <label>DateTime 2</label>
    <type>DateTime</type>
</CustomField>