force-app/main/default/objects/FEC_DataCampaign__c/fields/FEC_DateTime3__c.field-meta.xml
<CustomField>
    <fullName>FEC_DateTime3__c</fullName>
    <label>DateTime 3</label>
    <type>DateTime</type>
</CustomField>