force-app/main/default/objects/FEC_DataCampaign__c/fields/FEC_InsertionDate__c.field-meta.xml
<CustomField>
    <fullName>FEC_InsertionDate__c</fullName>
    <label>InsertionDate</label>
    <type>DateTime</type>
</CustomField>