force-app/main/default/objects/FEC_DataCampaign__c/fields/FEC_IsAtOrWithinLifetime__c.field-meta.xml
<CustomField>
    <fullName>FEC_IsAtOrWithinLifetime__c</fullName>
    <formula>FEC_RecordCurrentLifetime__c &lt;= FEC_RecordLifetime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is At Or Within Lifetime</label>
    <type>Checkbox</type>
</CustomField>