force-app/main/default/objects/FEC_DataCampaign__c/fields/FEC_IsMaxAttempt__c.field-meta.xml
<CustomField>
    <fullName>FEC_IsMaxAttempt__c</fullName>
    <label>Is Max Attempt</label>
    <length>50</length>
    <type>Text</type>
</CustomField>