force-app/main/default/objects/FEC_DataCampaign__c/fields/FEC_IsPushed__c.field-meta.xml
<CustomField>
    <fullName>FEC_IsPushed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Pushed</label>
    <type>Checkbox</type>
</CustomField>