force-app/main/default/objects/FEC_DataCampaign__c/fields/FEC_IsWithinLifetime__c.field-meta.xml
<CustomField>
    <fullName>FEC_IsWithinLifetime__c</fullName>
    <formula>FEC_RecordCurrentLifetime__c &lt; FEC_RecordLifetime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsWithinLifetime</label>
    <type>Checkbox</type>
</CustomField>