force-app/main/default/objects/FEC_DataCampaign__c/fields/FEC_MaxCallAttempt__c.field-meta.xml
<CustomField>
    <fullName>FEC_MaxCallAttempt__c</fullName>
    <label>MaxCallAttempt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>