force-app/main/default/objects/FEC_DataCampaign__c/fields/FEC_Number3__c.field-meta.xml
<CustomField>
    <fullName>FEC_Number3__c</fullName>
    <label>Number 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>