force-app/main/default/objects/FEC_DataCampaign__c/fields/FEC_ProductLine__c.field-meta.xml
<CustomField>
    <fullName>FEC_ProductLine__c</fullName>
    <label>Product Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>