force-app/main/default/objects/FEC_DataCampaign__c/fields/FEC_RecordCurrentLifetime__c.field-meta.xml
<CustomField>
    <fullName>FEC_RecordCurrentLifetime__c</fullName>
    <label>Record Current Lifetime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>