force-app/main/default/objects/FEC_DataCampaign__c/fields/FEC_RecordId__c.field-meta.xml
<CustomField>
    <fullName>FEC_RecordId__c</fullName>
    <label>Record Id</label>
    <type>AutoNumber</type>
</CustomField>