force-app/main/default/objects/FEC_DataCampaign__c/fields/FEC_RecordLifetime__c.field-meta.xml
<CustomField>
    <fullName>FEC_RecordLifetime__c</fullName>
    <label>Record Lifetime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>