force-app/main/default/objects/FEC_DataCampaign__c/fields/FEC_RecordStatus__c.field-meta.xml
<CustomField>
    <fullName>FEC_RecordStatus__c</fullName>
    <label>Record status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>