force-app/main/default/objects/FEC_DataCampaign__c/fields/FEC_SendToCommsDB__c.field-meta.xml
<CustomField>
    <fullName>FEC_SendToCommsDB__c</fullName>
    <label>Send To Comms DB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>