force-app/main/default/objects/FEC_DataCampaign__c/fields/FEC_SentInstantly__c.field-meta.xml
<CustomField>
    <fullName>FEC_SentInstantly__c</fullName>
    <label>Sent Instantly</label>
    <length>255</length>
    <type>Text</type>
</CustomField>