force-app/main/default/objects/FEC_DataCampaign__c/fields/FEC_String1__c.field-meta.xml
<CustomField>
    <fullName>FEC_String1__c</fullName>
    <label>String 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>