force-app/main/default/objects/FEC_DataCampaign__c/fields/FEC_String2__c.field-meta.xml
<CustomField>
    <fullName>FEC_String2__c</fullName>
    <label>String 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>