force-app/main/default/objects/FEC_DataCampaign__c/fields/FEC_SystemName__c.field-meta.xml
<CustomField>
    <fullName>FEC_SystemName__c</fullName>
    <label>System Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>